@@ -32,3 +32,4 @@ Sammy Spets		<sammys@cse.unsw.edu.au>
 Steve Lacy		<gallery@slacy.com>
 Dr. Tilman Bubeck	<t.bubeck@reinform.de>
 Troy Edwards		<vallimar@sexorcisto.net>
+Martin Smallridge 	<info@snailsource.com>
