@@ -18,10 +18,15 @@
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
  */
 
-// This class is written for phpBB2 and provides full integration of the phpbb users database
-// Instead of using or duplicating memberships manually in Gallery.
-
-// Gallery -> phpBB2 integration ver. 1.4.1 (www.snailsource.com)
+/* This class is written for phpBB2 and provides full integration of the phpbb users database
+** Instead of using or duplicating memberships manually in Gallery.
+**
+** Gallery <-> phpBB2 integration ver. (www.snailsource.com)
+** Written by Martin Smallridge       <info@snailsource.com>
+**
+** This file was modified for official integration into Gallery 1.4.3 by
+** Jens Tkotz
+*/
 
 class phpbb_UserDB extends Abstract_UserDB {
 	var $db;
@@ -44,14 +49,6 @@ class phpbb_UserDB extends Abstract_UserDB {
 		while ($row = $db->fetch_row($result)) {
 			array_push($uidList, $row[0]);
 		}
-
-/*
-		while (list($uid) = $result->fields) {
-			array_push($uidList, $row[0]);
-			$result->MoveNext();
-		}
-		$result->Close();
-*/
 
 		array_push($uidList, $this->nobody->getUid());
 		array_push($uidList, $this->everybody->getUid());
