@@ -1,3 +1,7 @@
+2004-01-26 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b5
+
+	* New: Added Martin Smallridge to AUTHORS and give him credits for his phpBB Code.
+
 2004-01-24  Bharat Mediratta  <bharat@menalto.com> 1.4.3-cvs-b4
 
 	* Fixed remote security exploit in init.php and setup/init.php where
